# ai_reachy_mini

./: .gitmodules  reachy-mini-research.md
app-store-dashboard/: index.html
app-store-data/: apps-full.json  apps-index.json  categories.json
mime_bot/: .gitignore  AGENTS.md  MAPPING.md  README.md  index.html  main.js  plan.md  reachy-mini.js  style.css
reachy-mini-code/: README.md  SUMMARY.md
reachy-mini-code/community/f1commentator/: .gitignore  README.md  index.html  pyproject.toml  requirements.txt  style.css  test_full_race_commentary.py  test_race_events.py  test_ui.html
reachy-mini-code/community/f1commentator/reachy_f1_commentator/: README.md  __init__.py  app.py  full_race_mode.py  index.html  main.py  models.py  openf1_client.py
reachy-mini-code/community/f1commentator/reachy_f1_commentator/config/: .env.example  config.json  config_enhanced_example.json  enhanced_templates.json
reachy-mini-code/community/f1commentator/reachy_f1_commentator/reachy_f1_commentator/: main.py
reachy-mini-code/community/f1commentator/reachy_f1_commentator/src/: __init__.py  api_timeouts.py  commentary_generator.py  commentary_style_manager.py  commentary_system.py  config.py  context_enricher.py  context_fetcher.py  data_ingestion.py  enhanced_commentary_generator.py  enhanced_models.py  event_prioritizer.py  event_queue.py  fault_isolation.py  frequency_trackers.py  graceful_degradation.py  logging_config.py  models.py  motion_controller.py  narrative_tracker.py  openf1_data_cache.py  phrase_combiner.py  placeholder_resolver.py  qa_manager.py  race_state_tracker.py  replay_mode.py  resource_monitor.py  speech_synthesizer.py  template_library.py  template_selector.py
reachy-mini-code/community/f1commentator/reachy_f1_commentator/static/: dashboard.css  dashboard.html  dashboard.js  index.html  main.js  style.css
reachy-mini-code/community/f1commentator/reachy_f1_commentator/tests/: __init__.py  test_commentary_generator.py  test_commentary_integration.py  test_commentary_style_manager.py  test_commentary_system.py  test_config.py  test_context_enricher.py  test_context_fetcher.py  test_data_ingestion.py  test_data_ingestion_integration.py  test_end_to_end_integration.py  test_enhanced_commentary_generator.py  test_error_handling.py  test_event_prioritizer.py  test_event_queue.py  test_frequency_integration.py  test_frequency_trackers.py  test_historical_races.py  test_logging.py  test_models.py  test_motion_controller.py  test_narrative_tracker.py  test_openf1_data_cache.py  test_performance.py  test_phrase_combiner.py  test_placeholder_resolver.py  test_qa_integration.py  test_qa_manager.py  test_race_state_tracker.py  test_replay_integration.py  test_replay_mode.py  test_significance_calculator.py  test_speech_synthesizer.py  test_system_end_to_end.py  test_template_library.py  test_template_selector.py
reachy-mini-code/community/hand_tracker_v2/: .gitattributes  README.md  index.html  pyproject.toml  style.css
reachy-mini-code/community/hand_tracker_v2/hand_tracker_v2/: hand_tracker.py  main.py  recorded_moves.py  utils.py
reachy-mini-code/community/hand_tracker_v2/hand_tracker_v2/static/: index.html  main.js  style.css
reachy-mini-code/community/reachy_mini_3d_web_viz/: LICENSE.TXT  README.md  index.html  pyproject.toml  style.css  update_app_name.sh
reachy-mini-code/community/reachy_mini_3d_web_viz/reachy_mini_3d_web_viz/: main.py
reachy-mini-code/community/reachy_mini_3d_web_viz/reachy_mini_3d_web_viz/scripts/: optimize_meshes.py  run_optimization.sh  update_urdf.py
reachy-mini-code/community/reachy_mini_3d_web_viz/reachy_mini_3d_web_viz/static/: index.html  style.css
reachy-mini-code/community/reachy_mini_3d_web_viz/reachy_mini_3d_web_viz/static/assets/meshes_optimized/: 5w_speaker.glb  antenna.glb  antenna_V2.glb  antenna_body_3dprint.glb  antenna_holder_l_3dprint.glb  antenna_holder_r_3dprint.glb  antenna_interface_3dprint.glb  arducam.glb  b3b_eh.glb  b3b_eh_1.glb  bearing_85x110x13.glb  big_lens_d40.glb  body_down_3dprint.glb  body_foot_3dprint.glb  body_top_3dprint.glb  body_turning_3dprint.glb  bts2_m2_6x8.glb  dc15_a01_case_b_dummy.glb  dc15_a01_case_f_dummy.glb  dc15_a01_case_m_dummy.glb  dc15_a01_horn_dummy.glb  dc15_a01_led_cap2_dummy.glb  glasses_dolder_3dprint.glb  head_back_3dprint.glb  head_front_3dprint.glb  head_mic_3dprint.glb  lens_cap_d30_3dprint.glb  lens_cap_d40_3dprint.glb  m12_fisheye_lens_1_8mm.glb  mp01062_stewart_arm_3.glb  neck_reference_3dprint.glb  phs_1_7x20_5_dc10.glb  phs_1_7x20_5_dc10_1.glb  phs_1_7x20_5_dc10_2.glb  phs_1_7x20_5_dc10_3.glb  pp01102_arducam_carter.glb  small_lens_d30.glb  stewart_link_ball.glb  stewart_link_ball__2.glb  stewart_link_rod.glb  (+2 more)
reachy-mini-code/community/reachy_mini_3d_web_viz/reachy_mini_3d_web_viz/static/src/: App.js  ChartManager.js  InteractionManager.js  RobotManager.js  RobotState.js  SceneManager.js  UIManager.js  WebSocketManager.js
reachy-mini-code/community/reachy_mini_phone_teleop/: .gitattributes  README.md  index.html  pyproject.toml  style.css
reachy-mini-code/community/reachy_mini_phone_teleop/reachy_mini_phone_teleop/: main.py
reachy-mini-code/community/reachy_mini_phone_teleop/reachy_mini_phone_teleop/web/: index.html
reachy-mini-code/community/reachy_mini_radio/: README.md  index.html  pyproject.toml  style.css
reachy-mini-code/community/reachy_mini_radio/reachy_mini_radio/: antenna_button.py  main.py  webradio_selector.py  webradios.json
reachy-mini-code/community/reachy_mini_radio/reachy_mini_radio/static/: index.html  main.js  style.css
reachy-mini-code/community/reachy_mini_simon/: README.md  generate_sounds.py  index.html  pyproject.toml  style.css
reachy-mini-code/community/reachy_mini_simon/reachy_mini_simon/: main.py
reachy-mini-code/community/spaceship_game/: .gitattributes  README.md  index.html  pyproject.toml
reachy-mini-code/community/spaceship_game/spaceship_game/: hf_leaderboard.py  leaderboard.json  main.py
reachy-mini-code/community/spaceship_game/spaceship_game/static/: index.html  main.js
reachy-mini-docs/: README.md
(+57 files in other folders)
