[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reachy_f1_commentator"
version = "1.0.0"
description = "An interactive F1 race commentary system for Reachy Mini"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Dave Starling", email="dave@starling.email"}
]
keywords = ["reachy", "f1", "commentary", "robotics", "tts", "racing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "reachy-mini>=0.1.0",
    "elevenlabs>=1.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=2.1.0",  # For Whisper API transcription
    "webrtcvad>=2.0.10",  # For voice activity detection
    "numpy>=1.24.0",  # For audio processing
    "setuptools>=61.0",  # Required by webrtcvad for pkg_resources
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.88.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
reachy_f1_commentator = "reachy_f1_commentator.main:main"

[project.entry-points."reachy_mini_apps"]
reachy_f1_commentator = "reachy_f1_commentator.main:ReachyF1Commentator"

[project.urls]
Homepage = "https://huggingface.co/spaces/d10g/reachy-f1-commentator"
Repository = "https://huggingface.co/spaces/d10g/reachy-f1-commentator"
Documentation = "https://huggingface.co/spaces/d10g/reachy-f1-commentator"

[tool.setuptools]
packages = ["reachy_f1_commentator"]
include-package-data = true

[tool.setuptools.package-data]
reachy_f1_commentator = [
    "static/*",
    "config/*",
    "src/*"
]

[tool.pytest.ini_options]
testpaths = ["reachy_f1_commentator/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
