[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "reachy_mini_radio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "reachy-mini",
    "av>=16.0.1"
]


[project.optional-dependencies]
reachy_mini_wireless = [
    "reachy-mini[gstreamer]",
]


keywords = ["reachy-mini-app"]

[project.entry-points."reachy_mini_apps"]
reachy_mini_radio = "reachy_mini_radio.main:ReachyMiniRadio"

[tool.setuptools]
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
reachy_mini_radio = ["**/*"] # Inclut tous les fichiers non .py