[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "spaceship_game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "reachy-mini",
    "soundfile",
    "scipy",
]
keywords = ["reachy-mini-app"]

[project.entry-points."reachy_mini_apps"]
spaceship_game = "spaceship_game.main:SpaceshipGame"

[tool.setuptools]
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
spaceship_game = ["**/*"] # Also include all non-.py files